# PongSFML

./: .clang-format  CMakeLists.txt  Readme.md
source/: main.cpp
source/game/: game.cpp  game.hpp
source/game/states/: menustate.cpp  menustate.hpp  pongstate.cpp  pongstate.hpp
source/utils/: io.hpp  physics.hpp  timer.hpp
source/view/ball/: ball.cpp  ball.hpp
source/view/menu/: menu.cpp  menu.hpp
source/view/player/: player.cpp  player.hpp
source/view/text/: text.cpp  text.hpp
